# IITBDV-Recruitment-Hackathon

./: README.md
Perception/: cone_depth.py
Simulation-Development/workspace/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Simulation-Development/workspace/install/robot_sim/lib/robot_sim/: roam
Simulation-Development/workspace/install/robot_sim/share/robot_sim/: package.sh  package.xml
Simulation-Development/workspace/install/robot_sim/share/robot_sim/urdf/: colour.xacro  robot.urdf
Simulation-Development/workspace/log/: latest_build
Simulation-Development/workspace/src/robot_sim/: setup.py
Simulation-Development/workspace/src/robot_sim/launch/: check_urdf.launch.py  sim.launch.py  spawn_robot.launch.py  world.launch.py
Simulation-Development/workspace/src/robot_sim/rviz/: rviz.rviz
Simulation-Development/workspace/src/robot_sim/urdf/: robot.gazebo
Simulation-Development/workspace/src/robot_sim/worlds/: world.sdf
